--- a/Qasim DS Task 1.Rmd
+++ b/Qasim DS Task 1.Rmd
@@ -7,26 +7,39 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
 ```
 
-# Read Data Set
+## Importing the Data
 
-# Read Dataset 
+```{r , warning=FALSE,message=FALSE}
 
-```{r}
-require(tidyverse)
-require(dplyr)
-require(ggplot2)
 course_data <- read_csv("Data/Data - DS C1 Course.csv")
 
+course_data$`Student ID`[1:10];
+
+library(reticulate)
+
+```
+## Exploratory Data Analysis (EDA)
+
+
+```{r EDA }
+
+
+
 
 ```
 
+## Running Python in R
+We will demonstrate how python will run in RStudio.
 
 ```{r}
 
-
-course_data$Age
-
 ```
+
+
+
+
 
