--- a/Umair_Flexadashboard.Rmd
+++ b/Umair_Flexadashboard.Rmd
@@ -12,7 +12,8 @@ library(flexdashboard)
 ```{r}
 library("tidyverse")
 library("dplyr")
-
+library("knitr")
+library("kableExtra")
 ```
 
 Column {data-width=650}
@@ -25,7 +26,7 @@ ds_data <- read_csv(("Data/Data - DS C1 Course.csv"))
 head(ds_data)
 ds_data %>% group_by(`Do you understand that this is a paid course ?...3`) %>% summarize(n=n())
 ds_data %>% group_by(`Do you understand that this is a paid course ?...3`) %>% count()  
-  
+
 ```
 
 Column {data-width=350}
@@ -34,7 +35,7 @@ Column {data-width=350}
 ### Chart B
 
 ```{r}
-
+ds_data %>% group_by(Gender)  %>% count() %>% kable()
 ```
 
 ### Chart C
