--- a/qasimflexdashboard.Rmd
+++ b/qasimflexdashboard.Rmd
@@ -21,13 +21,12 @@ Column
 course_data <- read_csv("Data/Data - DS C1 Course.csv")
 
 
-
 ```
 
 ## Summarize the Data
 ```{r}
 
-head(course_data)
+course_data %>% group_by(Gender) %>%  count()
 
 ```
 
@@ -36,15 +35,22 @@ Column
 
 ### Chart B
 
+```{r}
+#course_data %>% colnames()
+
+```
 
 
 ```{r}
+
+
 
 ```
 
 ### Chart C
 
 ```{r}
+
 
 ```
 
