--- a/qasimflexdashboard.Rmd
+++ b/qasimflexdashboard.Rmd
@@ -10,13 +10,15 @@ output:
 library(flexdashboard)
 library(tidyverse)
 ```
-
+# Page 1
 Column
 -----------------------------------------------------------------------
 
 ### Chart A
+### Chart B
 
 ## Importing Data from csv
+### Importing Data from csv
 ```{r}
 course_data <- read_csv("Data/Data - DS C1 Course.csv")
 
@@ -33,7 +35,7 @@ course_data %>% group_by(Gender) %>%  count()
 Column 
 -----------------------------------------------------------------------
 
-### Chart B
+### Chart C
 
 ```{r}
 #course_data %>% colnames()
@@ -59,3 +61,5 @@ Column
 -----------------------------------------------------------------------
 
 ### Qasim's Flexdashboard
+
+# Page 2
