--- a/moniza_EDA_coursedata.Rmd
+++ b/moniza_EDA_coursedata.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(lubridate)
 library(stringr)
+library(knitr)
+#library(KableExtra)
 ```
 
 # Importing Data
